--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
+    "dayjs": "^1.11.13",
+    "unplugin-vue-components": "^28.5.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
