--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "preview": "vite preview",
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
-    "db": "json-server --watch db.json --port 5000 --delay=1000"
+    "db": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
     "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
     "dayjs": "^1.11.13",
+    "pinia": "^3.0.3",
     "unplugin-vue-components": "^28.5.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
